Fixed icon size and padding between the two subsections of the footer on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -18,4 +18,10 @@ and (max-width : 767px) {
 .security-icon{
 	display: none;
 }
+.help-icon{
+	width: 150px;
+}
+.below{
+	padding-top: 50px;
+}
 }
